# turtlebot-trajectory-tracking-controller

./: README.md  REAMDE.md  start.sh
catkin_ws/src/turtlebot_simulator/: CMakeLists.txt  Dockerfile  README.md  package.xml  trajectory.bag
catkin_ws/src/turtlebot_simulator/config/: turtlebot_simulator.yaml
catkin_ws/src/turtlebot_simulator/include/turtlebot_simulator/: test_simple.h  turtlebot_simulator.h  utils.h
catkin_ws/src/turtlebot_simulator/include/turtlebot_simulator/engine/: turtlebot_simulator_ode.h
catkin_ws/src/turtlebot_simulator/launch/: turtlebot_simulator.launch  turtlebot_simulator_test.launch  turtlebot_simulator_test_with_bag.launch
catkin_ws/src/turtlebot_simulator/script/: plot_result.py
catkin_ws/src/turtlebot_simulator/src/: test_simple.cpp  test_simple_node.cpp  turtlebot_simulator.cpp  turtlebot_simulator_node.cpp
catkin_ws/src/turtlebot_simulator/src/engine/: turtlebot_simulator_ode.cpp
catkin_ws/src/turtlebot_traj_ctrl/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/turtlebot_traj_ctrl/config/: controller_params.yaml
catkin_ws/src/turtlebot_traj_ctrl/include/turtlebot_traj_ctrl/: fl_controller.h  traj_controller.h  turtlebot_traj_ctrl.h
catkin_ws/src/turtlebot_traj_ctrl/launch/: turtlebot_traj_ctrl.launch  turtlebot_traj_ctrl_with_bag.launch
catkin_ws/src/turtlebot_traj_ctrl/script/: bode_tuning_x.py  plot_result.py
catkin_ws/src/turtlebot_traj_ctrl/src/: fl_controller.cpp  traj_controller.cpp  turtlebot_traj_ctrl.cpp  turtlebot_traj_ctrl_node.cpp
docker-scripts/: entrypoint.sh
