<?xml version="1.0"?>
<package format="2">
  <name>turtlebot_simulator</name>
  <version>0.0.1</version>
  <description>ROS wrapper for ODE differential drive simulator (extended unicycle kinematic model) based on Boost Odeint library</description>
  <maintainer email="alessio.onori@mail.polimi.it">user</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>roslib</depend>
</package>